# podcaster

./: .gitignore  .justfile  main.py  pyproject.toml  text_source.py
hosts/: host1.txt  host2.txt
outlines/: outline1.txt
podcaster/: audio_stitcher.py  llm_client.py  models.py  prompt_renderer.py  source_repository.py  speech_to_audio_converter.py  transcript_generator.py  transcript_repository.py  transcript_to_audio_converter.py  tts_client.py
prompts/: generate_transcript.jinja
sources/: article1.txt  article2.txt
