[tool.poetry]
name = "podcaster"
version = "0.1.0"
description = "Turn your content into podcasts."
authors = ["Rob <robert.i.hendry@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
pydantic = "^2.9.2"
openai = "^1.51.2"
aiofiles = "^24.1.0"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"
inquirer = "^3.4.0"
rich = "^13.9.2"
pydub = "^0.25.1"
librosa = "^0.10.2.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
